<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nightshade Remote</string>
    <string name="label_constlines">Const. lines</string>
    <string name="label_constnames">Const. names</string>
    <string name="label_constart">Const. artwork</string>
    <string name="label_azigrid">Azimuthal grid</string>
    <string name="label_equagrid">Equatorial grid</string>
    <string name="label_ground">Toggle ground</string>
    <string name="label_cardinalpoints">Cardinal points</string>
    <string name="label_atmosphere">Atmosphere</string>
    <string name="label_planetnames">Planet names</string>
    <string name="label_nebulanames">Nebula names</string>
    <string name="label_coordinatesys">Coordinate sys.</string>
    <string name="label_track">Track</string>
    <string name="label_constbound">Const. bound.</string>
    <string name="title_activity_main">Nightshade Remote</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_new">New</string>
    <string name="label_notelist">Notes</string>
    <string name="label_filename">File Name:</string>
    <string name="label_scrip">Script:</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_note">Nightshade Remote</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="label_title">Title:</string>
    <string name="error_entername">Please enter a name!</string>
    <string name="title_buttons">Nightshade Remote</string>
    <string name="title_scripts">Scripts</string>
    <string name="title_custombuttons">Custom Buttons</string>
    <string name="title_notes">Notes</string>
    <string name="title_newnote">New Note</string>

    <string name="scripts_empty_text">There are no scripts.
To run scripts with the Nightshade program, place some sts files to your SD-Card into the NightshadeRemote/scripts folder.</string>
    <string name="custombuttons_empty_text">Press the \"Add\" button on the toolbar to add custom buttons!</string>
    <string name="notes_default_text">Press the \"Add\" button on the toolbar to add notes!</string>


    <string name="objects_from_catalog_label">From catalog</string>
    <string name="objects_free_text_label">Free text</string>
    <string name="objects_selection_label">Selection</string>
    <string name="object_find_label">Find</string>
    <string name="object_select_label">Select/track</string>
    <string name="object_nothing_selected">Nothing selected</string>
    <string name="object_unselect_label">Unselect object</string>
    <string name="title_objectmanager">Object manager</string>

    <string-array name="catalog_types">
        <item>M</item>
        <item>NGC</item>
        <item>HP</item>
    </string-array>

    <string-array name="object_types">
        <item>hp</item>
        <item>star</item>
        <item>planet</item>
        <item>nebula</item>
        <item>constellation</item>
        <item>constellation_star</item>
    </string-array>

    <string name="title_activity_credits">Credits</string>
    <string name="credits_text"><![CDATA[
        <h2>Created by:</h2>
        <p>
            Ákos Pap<br/>
            Márton Kerekes
        </p>

        <h2>Supervisors:</h2>
        <p>
            Bernadett Belucz<br/>
            Kristóf Csorba<br/>
            Norbert Koszó
        </p>

        <h2>Special thanks to:</h2>
        <p>
            Anikó Bere
        </p>

        <p>
            Budapest University of Technology and Economics<br/>
            Department of Automation and Applied Informatics
        </p>
    ]]>
    </string>
    <string name="menu_credits">Credits</string>

</resources>
