<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_constlines"
                android:id="@+id/textView_constlines" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_constlines"
                android:background="@drawable/button_constlines"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" "
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_constnames"
                android:id="@+id/textView_constnames" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_constnames"
                android:background="@drawable/button_constnames"
                android:singleLine="false"
                android:visibility="visible"
                android:textOn=" "
                android:textOff=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout2"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/constart"
                android:id="@+id/textView_constart" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_constart"
                android:background="@drawable/button_constart"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_azigrid"
                android:id="@+id/textView_azigrid" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_azigrid"
                android:background="@drawable/button_azigrid"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout3"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_equagrid"
                android:id="@+id/textView_e" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_equagrid"
                android:background="@drawable/button_equagrid"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout4"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_ground"
                android:id="@+id/textView_ground" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_ground"
                android:background="@drawable/button_ground"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cardinalpoints"
                android:id="@+id/textView_cardinalpoints" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_cardinalpoints"
                android:background="@drawable/button_cardinalpoints"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout5"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_atmosphere"
                android:id="@+id/textView_atmosphere" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_atmosphere"
                android:background="@drawable/button_atmosphere"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout6"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_planetnames"
                android:id="@+id/textView_planetnames" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_planetnames"
                android:background="@drawable/button_planetnames"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_nebulanames"
                android:id="@+id/textView_nebulanames" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_nebulanames"
                android:background="@drawable/button_nebulanames"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout7"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_coordinatesys"
                android:id="@+id/textView_coordinatesys" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_coordinatesys"
                android:background="@drawable/button_coordinatesys"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:id="@+id/linearLayout8"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/label_constbound"
                android:id="@+id/textView_constbound" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton_track"
                android:background="@drawable/button_constbound"
                android:singleLine="false"
                android:visibility="visible"
                android:textOff=" "
                android:textOn=" " />

        </LinearLayout>
    </TableRow>

</TableLayout>
